# mscout

./: Cargo.toml  Readme.md  flake.nix
.github/workflows/: compile-test.yml
src/: error.rs  listener.rs  main.rs  stats.rs
