[package]
edition = "2021"
name = "mpr"
version = "0.2.0"
authors = ["hardfault hardfau18@gmail.com"]
description = "rates song with skip/rate count for mpd"

[dependencies]
env_logger = "0.9"
id3 = "0.6"
once_cell = "*"
log = "0.4"
mpd = { git = "https://github.com/kstep/rust-mpd"}
notify-rust = "*"
serde_json = "1.0"
signal-hook = "*"
pbr = "1.0.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.clap]
version = "4.3"
features = ["env", "derive"]
