[package]
edition = "2021"
name = "mscout"
version = "0.2.0"
authors = ["hardfault hardfau18@gmail.com"]
description = "scout for mpd, listens for events, tracks the statistics, stores them either in mpd stickers or writes them directly to the metadata for permanent storage"

[dependencies]
env_logger = "0.9"
id3 = "0.6"
once_cell = "*"
log = "0.4"
notify-rust = "*"
serde_json = "1.0"
signal-hook = "*"
pbr = "1.0.4"
mpd = "0.1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.clap]
version = "4.3"
features = ["env", "derive"]
