[package]
edition = "2021"
name = "mscout"
version = "0.3.0"
authors = ["hardfault hardfau18@gmail.com"]
description = "scout for mpd, listens for events, tracks the statistics, stores them either in mpd stickers or writes them directly to the metadata for permanent storage"
license = "Apache-2.0"
homepage = "https://github.com/hardfau18/mscout"
repository = "https://github.com/hardfau18/mscout"
readme = "Readme.md"
keywords = ["mpd", "statistics", "stats"]
categories = ["multimedia::audio", "command-line-utilities"]

[dependencies]
env_logger = "0.9"
id3 = "0.6"
once_cell = "1.18"
log = "0.4"
notify-rust = "4.8"
serde_json = "1.0"
signal-hook = "0.3"
pbr = "1.0.4"
mpd = "0.1.0"
minijinja = "1.0.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.clap]
version = "4.3"
features = ["env", "derive"]
